Added inline code to README

--- a/README.org
+++ b/README.org
@@ -40,11 +40,11 @@
 ** How To Use
  The usage procedure assumes you are using Linux, cmake, and are familiar with the CLI.
 
- 1. Clone the repository `git clone https://github.com/mikrl/landau-ps.git`
- 2. At the project root run `mkdir build && cd build && cmake ../ && make`
- 3. Run `./landau` for usage information
+ 1. Clone the repository ~git clone https://github.com/mikrl/landau-ps.git~
+ 2. At the project root run ~mkdir build && cd build && cmake ../ && make~
+ 3. Run ~./landau~ for usage information
 
- This project should ultimately be compatible with most UNIX-like systems and Windows, in that order of priority.
+ This project will ultimately be compatible with most UNIX-like systems and Windows, in that order of priority.
 
 ** How to Contribute
  Simple in theory, but I still need to iron out style, gitignore, projecty stuff:
