Added project status to README

--- a/README.org
+++ b/README.org
@@ -2,6 +2,7 @@
 #+AUTHOR: Michael Lynch (mikrl)
 #+EMAIL: m7lynch@uwaterloo.ca
 
+* PROJECT STATUS: Initial (architectural planning)
 ** Introduction
 *** What is the Landau Physics Simulator?
  The Landau Physics Simulator is an SIMT powered simulator built in modern C++ and supporting many macro and microscopic physical phenomena. A Python 3.x interface allows researchers to quickly deploy simulations including or excluding a range of physical theories.
